--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "API_BASE": "https://script.google.com/macros/s/AKfycbw1A4jk9Bec-3w1cgR1z_ZJZgvK_7vKBxVPeF_mwkkTQstQbeGhKPzsB501Kz6I4lo/exec",
-  "API_KEY": "1W1UhrA7G7Df1HbVlyZ1Sh9tVNtD-E6HhW7yWQ6QkCw1ilg4RvIx5Y26Z",
+  "API_KEY": "f642937d-fb1",
   "DEFAULT_COUNTRY_CODE": "20",
   "COMPANY_NAME": "مصر تكنولوجى",
   "PRIMARY_COLOR": "#f97316",
